--- a/AddSubView/src/main/res/layout/activity_main.xml
+++ b/AddSubView/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
         android:layout_height="wrap_content"
         app:value="1"
         app:minValue="1"
-        app:maxVlaue="15"
+        app:maxValue="15"
         app:numberAddBackground="@drawable/goods_add_btn"
         app:numberSubBackground="@drawable/goods_sub_btn"/>
 
